Bug 1337336 - Fix ReloadPAC() for the PROXYCONFIG_SYSTEM case. r=bagder